--- a/vercel.json
+++ b/vercel.json
@@ -7,12 +7,7 @@
             "use": "@vercel/node"
         }
     ],
-    "routes": [
-        { 
-            "src": "(/.*)", 
-            "dest": "main.ts"
-        }
-    ],
+    "rewrites": [{ "source": "/.*", "destination": "main.ts" }],
     "headers": [
         {
             "source": "/api/(.*)",
